--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  margin-bottom: auto;
   padding: 2rem;
   text-align: center;
 }
